fix(compat): use String charset in URLEncoder.encode for Java 8 [APS-18945] [APS-18946]
- Replace StandardCharsets.UTF_8 (Charset) with "UTF-8" (String) in
  URLEncoder.encode calls — the Charset overload requires Java 10+
- Add throws Exception to @Before setUp methods to satisfy the
  checked UnsupportedEncodingException declaration
- Pre-existing compilation failure on main branch; unrelated to the
  dependency version bumps in this PR